--- a/src/app/visibility/visibility.component.less
+++ b/src/app/visibility/visibility.component.less
@@ -42,7 +42,7 @@
 }
 .approvalStatus{
 	border: 1px solid #eee;
-	width: 410px;
+	width: 250px;
 	margin-bottom: 20px;
 	div{
 		background-color: #999;
@@ -50,9 +50,30 @@
 		padding: 5px;
 		font-weight: bold;
 		display: inline-block;
-		width: 200px;
+		width: 120px;
 	}
 	div + div{
 		background-color: #fff;
 	}
+}
+.visibilityCol1{
+	width: 10%;
+}
+.visibilityCol2Git{
+	width: 20%;
+}
+.visibilityCol2Jira{
+	width: 10%;
+}
+.visibilityCol3{
+	width: fit-content;
+}
+.commentsText{
+	margin: 10px 15px;
+	td{
+		padding: 5px;
+	}
+}
+.text-activated{
+	color: #007bff;
 }
