--- a/src/app/application-onboarding/data-source/data-source.component.html
+++ b/src/app/application-onboarding/data-source/data-source.component.html
@@ -46,8 +46,8 @@
                       </thead>
                       <tbody>
                           <tr *ngFor="let datasourceData of currentPage | filter:searchData; let i=index">
-                            <td *ngIf = "datasourceData.usage != 'visibility'">{{datasourceData.name}}</td>
-                            <td *ngIf = "datasourceData.usage === 'visibility'">{{datasourceData.displayName}}</td>
+                            <td>{{datasourceData.name}}</td>
+                            <!-- <td *ngIf = "datasourceData.usage === 'visibility'">{{datasourceData.displayName}}</td> -->
                             <td>{{datasourceData.datasourceType}}</td>
                              <td>
                               <span data-toggle="tooltip" data-placement="top" data-original-title="Edit" (click)="onselectDatasource('Edit',datasourceData,i)">
