UI update in the listing

--- a/src/app/visibility/visibility.component.less
+++ b/src/app/visibility/visibility.component.less
@@ -31,10 +31,10 @@
 }
 .gateNameSelection{
 	// background-color: #eee !important;
-	margin: 1px 5px 4px !important;
+	// margin: 1px 5px 4px !important;
 	width: -webkit-fill-available;
-	td{
-		background-color: #fff !important;
+	td {
+		// background-color: #fff !important;
 	}
 }
 .gateNametr{
@@ -76,4 +76,20 @@
 }
 .text-activated{
 	color: #007bff;
+}
+.mw-330 {
+	min-width: 330px;
+	width: 330px;
+}
+.row-container {
+	border: 1px solid red;
+}
+::ng-deep .gate-search .mat-form-field-underline {
+	bottom: 0px !important;
+}
+::ng-deep .gate-search .mat-form-field-wrapper {
+	padding-bottom: 0px !important;
+}
+.service-list {
+    padding: 15px 25px;
 }
