--- a/src/app/visibility/visibility.component.html
+++ b/src/app/visibility/visibility.component.html
@@ -1,9 +1,9 @@
-<div class="main_content p-0 bg-white">
+<div class="main_content p-0">
     <div class="d-flex">
-        <div class="leftBox bg-white mw-250">
-            <div class="leftBox_header text-muted text-center">
+        <div class="leftBox mw-330">
+            <div class="leftBox_header text-muted text-left">
                 <form class="example-form">
-                  <mat-form-field class="example-full-width">
+                  <mat-form-field class="example-full-width gate-search">
                     <input type="text"
                           placeholder="Select Application"
                           aria-label="Number"
@@ -20,35 +20,39 @@
             </div>
             <!-- /.leftBox_header -->
 
-            <div class="leftBox_body">
-                <table class="table table-sm table-avenir table-no-bordered table-no-dots " *ngIf="serviceList != undefined">
-                <tbody>
-                  <tr *ngIf="serviceList.length > 0">
+            <div class="service-list">
+              <div class="table table-sm table-avenir table-no-bordered table-no-dots " *ngIf="serviceList != undefined">
+                <!-- <tbody> -->
+                  <!-- <tr *ngIf="serviceList.length > 0">
                     <th >Service</th>
                     <th>Status</th>
-                  </tr>
-                  <ng-container *ngFor="let service of serviceList; let i=index;">
-                  <tr  [ngClass]="{'active-service': service.serviceId == selectedServiceId}">
-                    <td class="service-selection" style="padding-left: 2px !important;" (click)="onClickService(service)">{{service.serviceName}}
-                      </td>
-                  </tr>
-                  <tr class="gateNametr">
-                    <td  colspan="2">
+                  </tr> -->
+                <div class="mb-2" *ngFor="let service of serviceList; let i=index;" style="border: 1px solid #e6ecf1;border-radius: 5px;border-radius: 5px;cursor: pointer;" [ngClass]="{'bg-white': service.serviceId == selectedServiceId}"  [ngStyle]="{'box-shadow': service.serviceId == selectedServiceId ? '0 0 3px 1px rgb(47 65 81 / 53%)' : 'rgb(47 65 81 / 20%) 0px 0px 3px 1px'}">
+                  <div style="padding: 5px 10px;font-size: 13px;border-top-left-radius: 5px;border-top-right-radius: 5px;" [ngStyle]="{'background': service.serviceId == selectedServiceId ? 'rgb(47 65 81 / 53%)' : 'rgb(128 128 128 / 14%)', 'color': service.serviceId == selectedServiceId ? 'white' : 'black'}">
+                    <span class="service-selection" style="" (click)="onClickService(service)">{{service.serviceName}}
+                    </span>
+                  </div>
+                  <div class="">
+                    <div style="padding: 5px 10px;">
                       <table class="gateNameSelection">
                         <tr>
                           <td>{{service.approvalGateName}} </td>
-                            <td style="text-align: left;" width="50" [ngClass]= "{'text-danger':service.status.status === 'rejected','text-success':service.status.status === 'approved','text-activated':service.status.status === 'activated'}">{{service.status.status}}
-                            </td>
-                          </tr>
+                          <td style="text-align: right;">
+                              <span [ngClass]= "{'text-danger':service.status.status === 'rejected','text-success':service.status.status === 'approved','text-activated':service.status.status === 'activated','text-waiting':service.status.status === 'waiting'}"
+                                    [title]="service.status.status">
+                                <i class="fas" [ngClass]= "{'fa-minus-circle':service.status.status === 'rejected','fa-check-circle':service.status.status === 'approved','fa-toggle-on':service.status.status === 'activated','fa-clock':service.status.status === 'waiting'}"></i>
+                              </span>
+                          </td>
+                        </tr>
                       </table>
-                    </td>
-                  </tr>                   
-                </ng-container>                     
-                  <tr *ngIf="serviceListEmpty">
-                    <td align="center">No services!</td>
-                  </tr>          
-                </tbody>
-              </table>
+                    </div>
+                  </div>                   
+                </div>                     
+                  <div *ngIf="serviceListEmpty">
+                    <span align="center">No services!</span>
+                  </div>          
+                <!-- </tbody> -->
+              </div>
             </div>
 
 
