--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -429,11 +429,11 @@
                                             <i class="fas fa-pencil-alt"></i>
                                           </a>
                                         </span>
-                                        <span>
+                                        <!-- <span>
                                           <a class="text-muted formarray_btn ml-2"  data-toggle="tooltip" data-placement="right" title="Delete" (click)="onDeleteGateName()">
                                             <i class="mt_custom-3 fas fa-trash-alt"></i>
                                           </a>
-                                        </span>
+                                        </span> -->
                                       </ng-container> 
                                       <ng-container *ngIf="isEditGateEnabled">                                    
                                         <span class="ml-2 addTemplate tick-button" data-toggle="tooltip" data-placement="top" data-original-title="Save" (click)="onEditGateName()">
@@ -525,7 +525,7 @@
                                                 <th>Tool type</th>
                                                 <th>Account</th>
                                                 <th>Template</th>
-                                                <th class="text-right"><a (click)="addConnector()" data-toggle="tooltip" data-placement="top" data-original-title="Add New Connector"><i class="fas fa-plus"></i></a></th>
+                                                <th class="text-right" *ngIf="addNewConnectorAllowed"><a (click)="addNewConnector()" data-toggle="tooltip" data-placement="top" data-original-title="Add New Connector"><i class="fas fa-plus"></i></a></th>
                                               </tr>
                                             </thead>
                                             <tbody>
@@ -534,7 +534,7 @@
                                                   <td>
                                                     <select class="form-control" formControlName="connectorType" (change)="onChangeTooltype($event.target.value)">
                                                       <option value="" [disabled]="true">Select</option>                                                       
-                                                      <option *ngFor="let tooltype of configuredToolTypes" value="{{tooltype}}" >
+                                                      <option *ngFor="let tooltype of toolTypes" value="{{tooltype}}" >
                                                           {{tooltype}}</option>
                                                     </select>
                                                     <!-- <input type="text" class="form-control" formControlName="connectorType" 
