--- a/src/app/visibility/visibility.component.less
+++ b/src/app/visibility/visibility.component.less
@@ -42,18 +42,19 @@
 }
 .approvalStatus{
 	border: 1px solid #eee;
-	width: 250px;
+	width: 323px;
 	margin-bottom: 20px;
 	div{
 		background-color: #999;
-		color: #eee;
+		color: #fff;
 		padding: 5px;
 		font-weight: bold;
 		display: inline-block;
 		width: 120px;
 	}
 	div + div{
-		background-color: #fff;
+		background-color: #f7f7f7;
+		width: 200px;
 	}
 }
 .visibilityCol1{
