removed background white

--- a/src/app/visibility/visibility.component.html
+++ b/src/app/visibility/visibility.component.html
@@ -1,6 +1,6 @@
 <div class="main_content p-0">
     <div class="d-flex">
-        <div class="leftBox mw-330 bg-white pt-4">
+        <div class="leftBox mw-330 pt-4">
             <div class="leftBox_header text-muted text-left">
                 <form class="example-form">
                   <mat-form-field class="example-full-width gate-search">
