--- a/src/app/visibility/visibility.component.html
+++ b/src/app/visibility/visibility.component.html
@@ -149,14 +149,12 @@
 
                                     <!-- <label class="col-sm-1 col-form-label">Activated:</label>
                                     <div class="col-sm-8">
-                                        <textarea class="form-control" rows="3" name="approvalGateComment" #approvalGateComment="ngModel" ngModel ></textarea>
+                                        
                                     </div>
 
                                     <label class="col-sm-1 col-form-label">Reviewed:</label>
                                     <div class="col-sm-8">
-                                        <textarea class="form-control" rows="3" name="approvalGateComment" #approvalGateComment="ngModel" ngModel ></textarea> -->
-
-                                    <!-- </div> -->
+                                         </div> -->
 
                                     <div class="col-sm-1 mr-2 alignCommentBtn"><button type="button"
                                             class="btn btn-success align-bottom" style="color: #fff;" (click)="approvalGateReview('approve', approvalGateComment)">Approve</button></div>
@@ -174,18 +172,20 @@
                                         {{approvalGateComment}}
                                       </td>
                                   </tr>
-                                  <!-- <tr>
+                                  <tr>
                                       <td><label >Activated Time:</label></td>
                                       <td>
-                                        {{approvalGateComment}}
+                                        <!-- {{approvalGateComment}} -->
+                                        Nov 2, 2020 at 02:30:00 PM
                                       </td>
                                   </tr>
                                   <tr>
-                                      <td><label >Approval Time:</label></td>
+                                      <td><label >Last Updated Time:</label></td>
                                       <td>
-                                        {{approvalGateComment}}
+                                        <!-- {{approvalGateComment}} -->
+                                        Nov 5, 2020 at 11:44:00 AM
                                       </td>
-                                  </tr> -->
+                                  </tr>
                                 </table>
                                   
                                     
