sapor config integration and dynamic menu integrated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
         <ul class="list-unstyled m-0" *ngFor="let SideMenu of Sidebar;" >
           <li class="{{SideMenu.disabled === true? 'disabled_menu': disabledLink(SideMenu.name)}} {{activeRoutes(SideMenu.link)}}" routerLink="{{SideMenu.link}}"><a><i class="icon {{SideMenu.link}}" matTooltip="{{SideMenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'"></i> <span>{{SideMenu.name }} 
             <ng-template [ngIf]="SideMenu.name === 'Applications' ?true:false">
-              <span class="badge badge-primary p-0 popover-hover" data-toggle="tooltip" data-placement="top" title="No. of Applications">{{applicationCount}}</span>
-              <span class="badge badge-info p-0 popover-hover" data-toggle="tooltip" data-placement="top" title="No. of Active gates">{{approvalGateInstanceCount}}</span>
+              <span class="badge badge-primary p-0 popover-hover" data-toggle="tooltip" data-placement="top" title="Num of Applications">{{applicationCount}}</span>
+              <span class="badge badge-info p-0 popover-hover" data-toggle="tooltip" data-placement="top" title="Num of Active gates">{{approvalGateInstanceCount}}</span>
             </ng-template>
             </span></a>
           </li>
@@ -19,7 +19,6 @@
                 <li class="{{submenu.disabled === true? 'disabled_menu': disabledLink(submenu.name)}} {{activeRoutes(submenu.link)}}" routerLink="{{submenu.link}}" (click)="navigateMenu($event,submenu.name)"><a><i class="icon {{subMenuclass(submenu.link)}}" matTooltip="{{submenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'"></i> <span>{{submenu.name}}</span></a></li>
               </ul>
             </ng-template>
-          
         </ul>
       </div>
       <a class="sidebar_bottom d-flex align-items-center justify-content-between">
