Updates made based on the comments recieved from Demo

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -33,6 +33,16 @@
         .Monitoring{
             background-position: -19px -180px;
         }
+        .fa-eye:before {
+            font-size: 15px;
+            padding-right: 10px;
+            color: #aaa;
+        }
+        .fa-line-chart:before {
+            font-size: 15px;
+            padding-right: 7px;
+            color: #aaa;
+        }
     }
 }
 .disabled_menu{
