--- a/src/styles.less
+++ b/src/styles.less
@@ -630,6 +630,9 @@ li {
 .icon.ic_production{
 	background-position: -19px -180px;
 }
+.icon.ic_visibility{
+	color: white;
+        }
 
 .sidebar_bottom{
 	color: #789 !important;
